[gd_scene load_steps=11 format=2]

[ext_resource path="res://entities/player/player.gd" type="Script" id=1]
[ext_resource path="res://entities/player/CrosshairRayCast.gd" type="Script" id=2]
[ext_resource path="res://entities/player/hud.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/player/InGameMenu.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[sub_resource type="Shader" id=7]
code = "/*
	Glitch Effect Shader by Yui Kinomoto @arlez80

	MIT License
*/

shader_type canvas_item;

// 振動の強さ
uniform float shake_power = 0.03;
// 振動率
uniform float shake_rate : hint_range( 0.0, 1.0 ) = 0.2;
// 振動速度
uniform float shake_speed = 5.0;
// 振動ブロックサイズ
uniform float shake_block_size = 30.5;
// 色の分離率
uniform float shake_color_rate : hint_range( 0.0, 1.0 ) = 0.01;

float random( float seed )
{
	return fract( 543.2543 * sin( dot( vec2( seed, seed ), vec2( 3525.46, -54.3415 ) ) ) );
}

void fragment( )
{
	float enable_shift = float(
		random( trunc( TIME * shake_speed ) )
	<	shake_rate
	);

	vec2 fixed_uv = SCREEN_UV;
	fixed_uv.x += (
		random(
			( trunc( SCREEN_UV.y * shake_block_size ) / shake_block_size )
		+	TIME
		) - 0.5
	) * shake_power * enable_shift;

	vec4 pixel_color = textureLod( SCREEN_TEXTURE, fixed_uv, 0.0 );
	pixel_color.r = mix(
		pixel_color.r
	,	textureLod( SCREEN_TEXTURE, fixed_uv + vec2( shake_color_rate, 0.0 ), 0.0 ).r
	,	enable_shift
	);
	pixel_color.b = mix(
		pixel_color.b
	,	textureLod( SCREEN_TEXTURE, fixed_uv + vec2( -shake_color_rate, 0.0 ), 0.0 ).b
	,	enable_shift
	);
	COLOR = pixel_color;
}
"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/shake_power = 0.03
shader_param/shake_rate = 0.0
shader_param/shake_speed = 5.0
shader_param/shake_block_size = 30.5
shader_param/shake_color_rate = 0.01

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HUD/GlitchEffect2:material:shader_param/shake_rate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "disable_discover_mode"
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_disable_discover_mode"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HUD/GlitchEffect2:material:shader_param/shake_rate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "enable_discover_mode"
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_enable_discover_mode"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HUD/GlitchEffect2:material:shader_param/shake_rate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="Player" type="KinematicBody" groups=["Player"]]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
mouse_sensitivity = 16.0
walk_speed = 7

[node name="Collision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.64, 0 )

[node name="Camera" type="Camera" parent="Head"]
current = true
far = 250.0

[node name="AimRayCast" type="RayCast" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, -10, 0 )
debug_shape_custom_color = Color( 0, 1, 0, 1 )
script = ExtResource( 2 )

[node name="InteractionRayCast" type="RayCast" parent="Head/Camera/AimRayCast"]
enabled = true
cast_to = Vector3( 0, -2, 0 )

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="GlitchEffect2" type="ColorRect" parent="HUD"]
material = SubResource( 8 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="InGameMenu" parent="." instance=ExtResource( 4 )]

[node name="Animations" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/disable_discover_mode = SubResource( 6 )
anims/enable_discover_mode = SubResource( 2 )

[connection signal="item_can_interact" from="Head/Camera/AimRayCast" to="HUD" method="_on_AimRayCast_item_can_interact"]
[connection signal="item_entred" from="Head/Camera/AimRayCast" to="." method="_on_AimRayCast_item_entred"]
[connection signal="item_entred" from="Head/Camera/AimRayCast" to="HUD" method="_on_AimRayCast_item_entred"]
[connection signal="item_exited" from="Head/Camera/AimRayCast" to="HUD" method="_on_AimRayCast_item_exited"]
[connection signal="resume" from="InGameMenu" to="." method="_on_InGameMenu_resume"]
